Catch Throwable in try functions for robustness