@@ -1,6 +1,5 @@
 package net.pincette.util;
 
-import static java.util.stream.Collectors.toList;
 import static net.pincette.util.Collections.list;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -12,18 +11,16 @@ class TestStreamUtil {
   @DisplayName("per")
   void per() {
     assertEquals(
-        list(list(0, 1), list(2, 3)),
-        StreamUtil.per(list(0, 1, 2, 3).stream(), 2).collect(toList()));
+        list(list(0, 1), list(2, 3)), StreamUtil.per(list(0, 1, 2, 3).stream(), 2).toList());
     assertEquals(
-        list(list(0, 1, 2), list(3)),
-        StreamUtil.per(list(0, 1, 2, 3).stream(), 3).collect(toList()));
+        list(list(0, 1, 2), list(3)), StreamUtil.per(list(0, 1, 2, 3).stream(), 3).toList());
     assertEquals(
         list(list(0, 1), list(2, 3), list(4)),
-        StreamUtil.per(list(0, 1, 2, 3, 4).stream(), 2).collect(toList()));
-    assertEquals(list(list(0)), StreamUtil.per(list(0).stream(), 2).collect(toList()));
-    assertEquals(list(list(0), list(1)), StreamUtil.per(list(0, 1).stream(), 1).collect(toList()));
-    assertEquals(list(), StreamUtil.per(list(0, 1).stream(), 0).collect(toList()));
-    assertEquals(list(list(0, 1)), StreamUtil.per(list(0, 1).stream(), 10).collect(toList()));
+        StreamUtil.per(list(0, 1, 2, 3, 4).stream(), 2).toList());
+    assertEquals(list(list(0)), StreamUtil.per(list(0).stream(), 2).toList());
+    assertEquals(list(list(0), list(1)), StreamUtil.per(list(0, 1).stream(), 1).toList());
+    assertEquals(list(), StreamUtil.per(list(0, 1).stream(), 0).toList());
+    assertEquals(list(list(0, 1)), StreamUtil.per(list(0, 1).stream(), 10).toList());
   }
 
   @Test
@@ -31,19 +28,19 @@ class TestStreamUtil {
   void slide() {
     assertEquals(
         list(list(0, 1), list(1, 2), list(2, 3)),
-        StreamUtil.slide(list(0, 1, 2, 3).stream(), 2).collect(toList()));
+        StreamUtil.slide(list(0, 1, 2, 3).stream(), 2).toList());
     assertEquals(
         list(list(0, 1, 2), list(1, 2, 3)),
-        StreamUtil.slide(list(0, 1, 2, 3).stream(), 3).collect(toList()));
-    assertEquals(list(), StreamUtil.slide(list(0).stream(), 2).collect(toList()));
-    assertEquals(list(list(0, 1)), StreamUtil.slide(list(0, 1).stream(), 2).collect(toList()));
+        StreamUtil.slide(list(0, 1, 2, 3).stream(), 3).toList());
+    assertEquals(list(), StreamUtil.slide(list(0).stream(), 2).toList());
+    assertEquals(list(list(0, 1)), StreamUtil.slide(list(0, 1).stream(), 2).toList());
   }
 
   @Test
   @DisplayName("tail")
   void tail() {
-    assertEquals(list(1, 2), StreamUtil.tail(list(0, 1, 2).stream()).collect(toList()));
-    assertEquals(list(), StreamUtil.tail(list(0).stream()).collect(toList()));
-    assertEquals(list(), StreamUtil.tail(list().stream()).collect(toList()));
+    assertEquals(list(1, 2), StreamUtil.tail(list(0, 1, 2).stream()).toList());
+    assertEquals(list(), StreamUtil.tail(list(0).stream()).toList());
+    assertEquals(list(), StreamUtil.tail(list().stream()).toList());
   }
 }
